Fix border radius on mobile

--- a/main.css
+++ b/main.css
@@ -251,11 +251,11 @@ body strong {
 		width: 90%;
 		height: auto;
 		padding: 5%;
-		border-radius: none;
+		border-radius: 0;
 	}
 	
 	.bubble-inner-wrapper {
-		border-radius: none;
+		border-radius: 0;
 		font-size: 1.5em;
 	}
 	
